Updated gradle files for v8.7